added a react component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* globals.css or a new custom CSS file */
+html,
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  /* scrollbar-width: none; Firefox */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +42,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
